--- a/production/devops-toolkit.yaml
+++ b/production/devops-toolkit.yaml
@@ -9,11 +9,11 @@ spec:
   project: production
   source:
     path: kustomize/overlays/production
-    repoURL: https://github.com/vfarcic/devspace-vcluster-argocd-demo
+    repoURL: https://github.com/infovein69/devspace-vcluster-argocd-demo
     targetRevision: HEAD
     kustomize:
       images:
-      - vfarcic/devops-toolkit:latest
+      - infovein69/devops-toolkit:latest
   destination:
     namespace: production
     server: https://kubernetes.default.svc
